# SchoolRobotMatch

./: .gitignore  CHANGELOG.md  README.md
ComputerVision/: shoot.py
ComputerVision/Aim/: main.cpp
ComputerVision/Aim/yolov5_dnn/: CMakeLists.txt
ComputerVision/AutoAimming/: CMakeLists.txt  main.cpp
ComputerVision/AutoAimming/mathfunc/: CMakeLists.txt
ComputerVision/Calibration/shoot/: shoot.cpp
ComputerVision/ColorPicker/: CMakeLists.txt  ColorRange.txt  main.cpp  sdf.txt
ComputerVision/GetAngle/: CMakeLists.txt  main.cpp  main2.cpp
ComputerVision/GetAngle/funcs/inc/: funcs.h
ComputerVision/GetAngle/funcs/src/: funcs.cpp
ComputerVision/GetAngle/mathfunc/inc/: mathfunc.h
ComputerVision/GetAngle/mathfunc/src/: mathfunc.cpp
ComputerVision/GetAngle/process/: CMakeLists.txt
ComputerVision/GetAngle/process/src/: process.cpp
ComputerVision/GetDistance/: CMakeLists.txt  main.cpp
ComputerVision/GetDistance/mathfunc/: CMakeLists.txt  mathfunc.cpp  mathfunc.h
ComputerVision/GetDistance/process/: CMakeLists.txt  process.cpp  process.h
ComputerVision/GetDistance/tool/: shoot.cpp
ComputerVision/MidTermAssessment/: CMakeLists.txt  README.md  TODO.md  compile_commands.json  main.cpp
ComputerVision/MidTermAssessment/.cache/clangd/index/: main.cpp.17CD4E356024FBFD.idx  mathfunc.cpp.8B24EB44B36963EC.idx  mathfunc.h.1652E23C359F3ED4.idx  yolo.cpp.5DE94C6B9ADA0B05.idx  yolo.h.9DA73B94C7546D3B.idx
ComputerVision/MidTermAssessment/mathfunc/: mathfunc.cpp  mathfunc.h
ComputerVision/MidTermAssessment/yolo/: CMakeLists.txt  yolo.cpp  yolo.h
ComputerVision/Modules/Aim/: CMakeLists.txt  detect.py
ComputerVision/Modules/Aim/yolov5_dnn/: yolov5_dnn.cpp  yolov5_dnn.h
ComputerVision/Modules/AutoAimming/: getrange.md  main.cpp  test.py
ComputerVision/Modules/Calibration/: param.csv
ComputerVision/Modules/ColorPicker/: CMakeLists.txt  ColorRange.txt  compile_commands.json  main.cpp  maind.cpp
ComputerVision/Modules/GetAngle/: CMakeLists.txt  Pipline.md
ComputerVision/Modules/GetDistance/: main.cpp
ComputerVision/Modules/GetDistance/tool/: CMakeLists.txt
ComputerVision/Modules/misc/V1/: CMakeLists.txt  main.cpp
ComputerVision/Modules/misc/V1/mathfunc/: CMakeLists.txt  mathfunc.h
ComputerVision/Modules/misc/V1/yolo/: CMakeLists.txt  yolo.h
ComputerVision/V1/: ne1000.pt
ComputerVision/V1/mathfunc/: mathfunc.cpp
ComputerVision/V1/yolo/: yolo.cpp
ComputerVision/V2/: main.cpp
ComputerVision/V2/func/: CMakeLists.txt  func.cpp  func.h
ComputerVision/V2/yolov3/: yolov3.cpp  yolov3.h
ComputerVision/V3/: CMakeLists.txt  ColorRange.txt  compile_commands.json  main.cpp
ComputerVision/V3/ReadColorRange/: CMakeLists.txt
ComputerVision/VisionSolutions/: README.md  TODO.md  test.py
ComputerVision/VisionSolutions/Solution1/: CMakeLists.txt  compile_commands.json  main.cpp
ComputerVision/VisionSolutions/Solution1/mathfunc/: CMakeLists.txt  mathfunc.cpp
ComputerVision/VisionSolutions/Solution1/serial/: CMakeLists.txt  serial.cpp  serial.h
ComputerVision/VisionSolutions/Solution1/test/: test  test.cpp
ComputerVision/VisionSolutions/Solution1/yolo/: yolo.cpp  yolo.h
ComputerVision/VisionSolutions/Solution2/: CMakeLists.txt  compile_commands.json  main.cpp  test.py
ComputerVision/VisionSolutions/Solution2/aim/: CMakeLists.txt  aim.cpp  aim.h
ComputerVision/VisionSolutions/Solution2/func/: CMakeLists.txt  func.cpp  func.h
ComputerVision/VisionSolutions/Solution2/serial/: serial.cpp  serial.h
ComputerVision/VisionSolutions/Solution2/yolo/: CMakeLists.txt  yolo.cpp  yolo.h
ComputerVision/VisionSolutions/Solution3/: CMakeLists.txt  compile_commands.json  main.cpp
ComputerVision/VisionSolutions/Solution3/aim/: CMakeLists.txt  aim.cpp  aim.h
ComputerVision/VisionSolutions/Solution3/func/: CMakeLists.txt  func.cpp  func.h
ComputerVision/VisionSolutions/Solution3/mathfunc/: CMakeLists.txt  mathfunc.cpp  mathfunc.h
ComputerVision/VisionSolutions/Solution3/process/: CMakeLists.txt  process.cpp  process.h
ComputerVision/VisionSolutions/Solution3/serial/: CMakeLists.txt  serial.cpp
ComputerVision/debugging/: README.md  TODO.md
ComputerVision/debugging/AutoAimming/: main.cpp  test.py
ComputerVision/debugging/ColorPicker/: CMakeLists.txt  main.cpp  mains.cpp  param.csv
ComputerVision/debugging/bright_Test/: CMakeLists.txt  main.cpp
ComputerVision/debugging/data640/: argument.py  rename.py
ComputerVision/debugging/filtering/: CMakeLists.txt  kmeans.cpp  kmeans.py  main.cpp  param.csv  seed.py
ComputerVision/debugging/laseraim/: CMakeLists.txt  main.cpp
ComputerVision/debugging/shootdatasets/: CMakeLists.txt  compile_commands.json  main.cpp  main.py  test.cpp
ComputerVision/debugging/videocapture/: CMakeLists.txt  main.cpp  rename.py  video_to_imgs.py
ComputerVision/test/: CMakeLists.txt  compile_commands.json  main.cpp
ComputerVision/test/serial/: serial.cpp  serial.h
MachineStructure/零件/: 底盘(未完善）.SLDPRT
MechanicalStructure/: README.md  注释说明.docx
MechanicalStructure/Mearm机械臂/: 右臂关节.SLDPRT  右臂基部关节.SLDPRT  右臂舵机夹板.SLDPRT  右臂连接件.SLDPRT  垫片.SLDPRT  夹爪.SLDPRT  夹爪驱动杆.SLDPRT  左夹.SLDPRT  左臂关节.SLDPRT  左臂基部关节.SLDPRT  左臂根部.SLDPRT  左臂舵机夹板.SLDPRT  左臂连接件.SLDPRT  底板.SLDPRT  机械臂.SLDASM  枢轴夹板.SLDPRT  舵机-SG90.SLDPRT  舵机舵片-单侧-长.SLDPRT  舵机舵片-单侧.SLDPRT  舵机舵片-双侧等长.SLDPRT  舵机限位器.SLDPRT  舵机鞍座(上).SLDPRT  舵机鞍座(下).SLDPRT  螺母.SLDPRT  连杆(异型).SLDPRT  连杆.SLDPRT
MechanicalStructure/小车结构/: 996R舵机支架.STEP  996R舵机支架.step.SLDPRT  TT130支架.SLDPRT  传送带模拟.SLDPRT  侧板.SLDPRT  底盘(未完善）.SLDPRT  整车装配2.SLDASM  舵机.STEP  角码.SLDPRT
MechanicalStructure/小车结构/Mearm/: M2×6十字螺钉.SLDPRT  M3×10内六角螺钉.SLDPRT  M3×12内六角螺钉.SLDPRT  M3×20内六角螺钉.SLDPRT  M3×6内六角螺钉.SLDPRT  (+27 more)
MechanicalStructure/装配体/: DC Motor Gearbox.SLDASM  整车装配.SLDASM  麦轮加电机装配体.SLDASM
MechanicalStructure/零件/: 996R舵机支架.SLDPRT  侧板.SLDPRT  底盘(未完善）.SLDPRT  背板.SLDPRT  舵机.SLDPRT  舵盘.SLDPRT  角码.SLDPRT
MicroController/MajorControl_Source/: README.md  Regular.md
MicroController/PID速度环控制/: encoder.c  encoder.h
MicroController/SerialControl/: CMakeLists.txt  compile_commands.json  main.cpp  test.txt  writetest.cpp
(+603 files in other folders)
